fixing the overlap issue on schedule nav

--- a/css/style.less
+++ b/css/style.less
@@ -497,7 +497,7 @@ schedule
   padding: 50px;
   position: absolute;
   top: 600px;
-  right: 100px;
+  right: -70px;
   z-index: 100;
   h3{
     text-align: center;
@@ -803,7 +803,6 @@ img.conference-image{
 
 .sponsors-circle{
   background: url(../images/sponsors-circle.png) no-repeat 100% 0;
-  z-index: 1;
   .sponsors-large{
     float: right;
     margin-top: 128px;
@@ -1256,6 +1255,7 @@ media queries
   
   
   .become-a-sponsor{
+    display: none;
     background: none;
   }
   
